--- a/pom.xml
+++ b/pom.xml
@@ -66,6 +66,13 @@
             <version>30.0-jre</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <optional>true</optional>
+        </dependency>
+
+
     </dependencies>
 
     <build>
