--- a/dev/comunika-mensagem-def.yml
+++ b/dev/comunika-mensagem-def.yml
@@ -77,5 +77,5 @@ spec:
             successThreshold: 3
             env:
             - name: SPRING_PROFILES_ACTIVE
-              value: default
+              value: devtst
             
